src/parser.out
Created by PLY (http://www.dabeaz.com/ply)

Unused terminals:

    TK_COLUMN
    TK_DOT
    TK_IGNORE
    TK_IN

Grammar

Rule 0     S' -> input
Rule 1     input -> cmdlist
Rule 2     cmdlist -> ecmd
Rule 3     ecmd -> cmd
Rule 4     cmd -> create_table create_table_args
Rule 5     create_table -> TK_CREATE TK_TABLE id
Rule 6     create_table_args -> TK_LP columnlist TK_RP
Rule 7     columnlist -> columnlist TK_COMMA column
Rule 8     columnlist -> column
Rule 9     column -> columnid type
Rule 10    columnid -> id
Rule 11    type -> typename
Rule 12    typename -> id
Rule 13    id -> TK_STRING
Rule 14    cmd -> select
Rule 15    select -> oneselect
Rule 16    oneselect -> TK_SELECT selcollist from
Rule 17    selcollist -> TK_STAR
Rule 18    from -> TK_FROM seltablist
Rule 19    stl_prefix -> <empty>
Rule 20    seltablist -> stl_prefix id
Rule 21    id -> TK_ID

Terminals, with rules where they appear

TK_COLUMN            : 
TK_COMMA             : 7
TK_CREATE            : 5
TK_DOT               : 
TK_FROM              : 18
TK_ID                : 21
TK_IGNORE            : 
TK_IN                : 
TK_LP                : 6
TK_RP                : 6
TK_SELECT            : 16
TK_STAR              : 17
TK_STRING            : 13
TK_TABLE             : 5
error                : 

Nonterminals, with rules where they appear

cmd                  : 3
cmdlist              : 1
column               : 7 8
columnid             : 9
columnlist           : 6 7
create_table         : 4
create_table_args    : 4
ecmd                 : 2
from                 : 16
id                   : 5 10 12 20
input                : 0
oneselect            : 15
selcollist           : 16
select               : 14
seltablist           : 18
stl_prefix           : 20
type                 : 9
typename             : 11


state 0

    (0) S' -> . input
    (1) input -> . cmdlist
    (2) cmdlist -> . ecmd
    (3) ecmd -> . cmd
    (4) cmd -> . create_table create_table_args
    (14) cmd -> . select
    (5) create_table -> . TK_CREATE TK_TABLE id
    (15) select -> . oneselect
    (16) oneselect -> . TK_SELECT selcollist from

    TK_CREATE       shift and go to state 7
    TK_SELECT       shift and go to state 9

    input                          shift and go to state 1
    cmdlist                        shift and go to state 2
    ecmd                           shift and go to state 3
    cmd                            shift and go to state 4
    create_table                   shift and go to state 5
    select                         shift and go to state 6
    oneselect                      shift and go to state 8

state 1

    (0) S' -> input .



state 2

    (1) input -> cmdlist .

    $end            reduce using rule 1 (input -> cmdlist .)


state 3

    (2) cmdlist -> ecmd .

    $end            reduce using rule 2 (cmdlist -> ecmd .)


state 4

    (3) ecmd -> cmd .

    $end            reduce using rule 3 (ecmd -> cmd .)


state 5

    (4) cmd -> create_table . create_table_args
    (6) create_table_args -> . TK_LP columnlist TK_RP

    TK_LP           shift and go to state 11

    create_table_args              shift and go to state 10

state 6

    (14) cmd -> select .

    $end            reduce using rule 14 (cmd -> select .)


state 7

    (5) create_table -> TK_CREATE . TK_TABLE id

    TK_TABLE        shift and go to state 12


state 8

    (15) select -> oneselect .

    $end            reduce using rule 15 (select -> oneselect .)


state 9

    (16) oneselect -> TK_SELECT . selcollist from
    (17) selcollist -> . TK_STAR

    TK_STAR         shift and go to state 14

    selcollist                     shift and go to state 13

state 10

    (4) cmd -> create_table create_table_args .

    $end            reduce using rule 4 (cmd -> create_table create_table_args .)
sd

state 11

    (6) create_table_args -> TK_LP . columnlist TK_RP
    (7) columnlist -> . columnlist TK_COMMA column
    (8) columnlist -> . column
    (9) column -> . columnid type
    (10) columnid -> . id
    (13) id -> . TK_STRING
    (21) id -> . TK_ID

    TK_STRING       shift and go to state 19
    TK_ID           shift and go to state 20

    columnlist                     shift and go to state 15
    column                         shift and go to state 16
    columnid                       shift and go to state 17
    id                             shift and go to state 18

state 12

    (5) create_table -> TK_CREATE TK_TABLE . id
    (13) id -> . TK_STRING
    (21) id -> . TK_ID

    TK_STRING       shift and go to state 19
    TK_ID           shift and go to state 20

    id                             shift and go to state 21

state 13

    (16) oneselect -> TK_SELECT selcollist . from
    (18) from -> . TK_FROM seltablist

    TK_FROM         shift and go to state 23

    from                           shift and go to state 22

state 14

    (17) selcollist -> TK_STAR .

    TK_FROM         reduce using rule 17 (selcollist -> TK_STAR .)


state 15

    (6) create_table_args -> TK_LP columnlist . TK_RP
    (7) columnlist -> columnlist . TK_COMMA column

    TK_RP           shift and go to state 24
    TK_COMMA        shift and go to state 25


state 16

    (8) columnlist -> column .

    TK_RP           reduce using rule 8 (columnlist -> column .)
    TK_COMMA        reduce using rule 8 (columnlist -> column .)


state 17

    (9) column -> columnid . type
    (11) type -> . typename
    (12) typename -> . id
    (13) id -> . TK_STRING
    (21) id -> . TK_ID

    TK_STRING       shift and go to state 19
    TK_ID           shift and go to state 20

    type                           shift and go to state 26
    typename                       shift and go to state 27
    id                             shift and go to state 28

state 18

    (10) columnid -> id .

    TK_STRING       reduce using rule 10 (columnid -> id .)
    TK_ID           reduce using rule 10 (columnid -> id .)


state 19

    (13) id -> TK_STRING .

    TK_STRING       reduce using rule 13 (id -> TK_STRING .)
    TK_ID           reduce using rule 13 (id -> TK_STRING .)
    TK_LP           reduce using rule 13 (id -> TK_STRING .)
    TK_RP           reduce using rule 13 (id -> TK_STRING .)
    TK_COMMA        reduce using rule 13 (id -> TK_STRING .)
    $end            reduce using rule 13 (id -> TK_STRING .)


state 20

    (21) id -> TK_ID .

    TK_STRING       reduce using rule 21 (id -> TK_ID .)
    TK_ID           reduce using rule 21 (id -> TK_ID .)
    TK_LP           reduce using rule 21 (id -> TK_ID .)
    TK_RP           reduce using rule 21 (id -> TK_ID .)
    TK_COMMA        reduce using rule 21 (id -> TK_ID .)
    $end            reduce using rule 21 (id -> TK_ID .)


state 21

    (5) create_table -> TK_CREATE TK_TABLE id .

    TK_LP           reduce using rule 5 (create_table -> TK_CREATE TK_TABLE id .)


state 22

    (16) oneselect -> TK_SELECT selcollist from .

    $end            reduce using rule 16 (oneselect -> TK_SELECT selcollist from .)


state 23

    (18) from -> TK_FROM . seltablist
    (20) seltablist -> . stl_prefix id
    (19) stl_prefix -> .

    TK_STRING       reduce using rule 19 (stl_prefix -> .)
    TK_ID           reduce using rule 19 (stl_prefix -> .)

    seltablist                     shift and go to state 29
    stl_prefix                     shift and go to state 30

state 24

    (6) create_table_args -> TK_LP columnlist TK_RP .

    $end            reduce using rule 6 (create_table_args -> TK_LP columnlist TK_RP .)


state 25

    (7) columnlist -> columnlist TK_COMMA . column
    (9) column -> . columnid type
    (10) columnid -> . id
    (13) id -> . TK_STRING
    (21) id -> . TK_ID

    TK_STRING       shift and go to state 19
    TK_ID           shift and go to state 20

    column                         shift and go to state 31
    columnid                       shift and go to state 17
    id                             shift and go to state 18

state 26

    (9) column -> columnid type .

    TK_RP           reduce using rule 9 (column -> columnid type .)
    TK_COMMA        reduce using rule 9 (column -> columnid type .)


state 27

    (11) type -> typename .

    TK_RP           reduce using rule 11 (type -> typename .)
    TK_COMMA        reduce using rule 11 (type -> typename .)


state 28

    (12) typename -> id .

    TK_RP           reduce using rule 12 (typename -> id .)
    TK_COMMA        reduce using rule 12 (typename -> id .)


state 29

    (18) from -> TK_FROM seltablist .

    $end            reduce using rule 18 (from -> TK_FROM seltablist .)


state 30

    (20) seltablist -> stl_prefix . id
    (13) id -> . TK_STRING
    (21) id -> . TK_ID

    TK_STRING       shift and go to state 19
    TK_ID           shift and go to state 20

    id                             shift and go to state 32

state 31

    (7) columnlist -> columnlist TK_COMMA column .

    TK_RP           reduce using rule 7 (columnlist -> columnlist TK_COMMA column .)
    TK_COMMA        reduce using rule 7 (columnlist -> columnlist TK_COMMA column .)


state 32

    (20) seltablist -> stl_prefix id .

    $end            reduce using rule 20 (seltablist -> stl_prefix id .)

